Change "Node" to "Vertex"

--- a/AOC/Utils/Graph.cls
+++ b/AOC/Utils/Graph.cls
@@ -1,26 +1,26 @@
 Class AOC.Utils.Graph Extends %RegisteredObject
 {
 
-Property Nodes [ MultiDimensional ];
+Property Vertices [ MultiDimensional ];
 
 Property Edges [ MultiDimensional ];
 
-Method AddNode(pName="",pValue="") As %Status
+Method AddVertex(pName="",pValue="") As %Status
 {
 	Set tSC=$$$OK
 	
 	If pName="" {
-		Set tSC=$$$ERROR("Node name cannot be empty")
-	} ElseIf $Data(..Nodes(pName)) {
-		Set tSC=$$$ERROR("Node name must be unique")
+		Set tSC=$$$ERROR("Vertex name cannot be empty")
+	} ElseIf $Data(..Vertices(pName)) {
+		Set tSC=$$$ERROR("Vertex name must be unique")
 	} Else {
-		Set ..Nodes(pName)=pValue
+		Set ..Vertices(pName)=pValue
 	}
 	
 	Quit tSC
 }
 
-Method RemoveNode(pName="") As %Status
+Method RemoveVertex(pName="") As %Status
 {
 	Set tSC=$$$OK
 	
@@ -30,51 +30,65 @@ Method RemoveNode(pName="") As %Status
 		Set tEdge=$o(..Edges(pName,tEdge))
 	}
 	
-	Kill ..Nodes(pName)
+	Kill ..Vertices(pName)
 	
 	Quit tSC
 }
 
-Method AddEdge(pNode1="", pNode2="", pDistance=0) As %Status
+Method AddEdge(pVertex1="", pVertex2="", pDistance=0) As %Status
 {
 	Set tSC=$$$OK
 	
-	Set ..Edges(pNode1,pNode2)=pDistance
-	Set ..Edges(pNode2,pNode1)=pDistance
+	Set ..Edges(pVertex1,pVertex2)=pDistance
+	Set ..Edges(pVertex2,pVertex1)=pDistance
 	
 	Quit tSC
 }
 
-Method RemoveEdge(pNode1, pNode2) As %Status
+Method RemoveEdge(pVertex1, pVertex2) As %Status
 {
 	Set tSC=$$$OK
 	
-	Kill ..Edges(pNode1,pNode2)
-	Kill ..Edges(pNode2,pNode1)
+	Kill ..Edges(pVertex1,pVertex2)
+	Kill ..Edges(pVertex2,pVertex1)
 	
 	Quit tSC
 }
 
-Method ShortestDistance(pNode1,pNode2,pDistance=0,ByRef pTested) As %Integer
+
+Method ShortestDistance(pVertex1,pVertex2,pDistance=0,ByRef pTested) As %Integer
 {
 	Set tRes=1E18
 	
-	// Recurse through all of pNode1 Edges
-	Set tNode=$o(..Edges(pNode1,""))
-	While tNode'="" {
-		If tNode=pNode2 {
-			// Once pNode2 is found, return total distance
-			Return pDistance+..Edges(pNode1,tNode)
-		} ElseIf '$Data(pTested(pNode1,tNode)) {
+	// Recurse through all of pVertex1 Edges
+	Set tVertex=$o(..Edges(pVertex1,""))
+	While tVertex'="" {
+		If tVertex=pVertex2 {
+			// Once pVertex2 is found, return total distance
+			Return pDistance+..Edges(pVertex1,tVertex)
+		} ElseIf '$Data(pTested(pVertex1,tVertex)) {
 			Merge tTested=pTested
-			Set tTested(pNode1,tNode)=1
-			Set tTested(tNode,pNode1)=1
+			Set tTested(pVertex1,tVertex)=1
+			Set tTested(tVertex,pVertex1)=1
 			
-			Set tTemp=..ShortestDistance(tNode,pNode2,pDistance+..Edges(pNode1,tNode),.tTested)
+			Set tTemp=..ShortestDistance(tVertex,pVertex2,pDistance+..Edges(pVertex1,tVertex),.tTested)
 			// If tTemp has a lower value than tRes, update tRes
 			Set:tTemp<tRes tRes=tTemp
 		}
-		Set tNode=$o(..Edges(pNode1,tNode))
+		Set tVertex=$o(..Edges(pVertex1,tVertex))
+	}
+	
+	Quit tRes
+}
+
+Method GetListOfVertices() As %List
+{
+	Set tRes=""
+	
+	Set tVertex=$o(..Vertices(""))
+	While tVertex'="" {
+		Set tRes=tRes_$lb(tVertex)
+		Set tVertex=$o(..Vertices(tVertex))
 	}
 	
 	Quit tRes
