--- a/AOC/Y2019.cls
+++ b/AOC/Y2019.cls
@@ -902,228 +902,27 @@ ClassMethod D8P2(input) As %String
 
 ClassMethod D9P1(input="",debug=0) As %String
 {
-	if input="" {
-		do ##class(AOC.Y2019).GetInput(9,.input)
+	Set intcode=##class(AOC.Y2019.Utils.Intcode).%New(9)
+	D intcode.AddInput(1)
+	set tSC=intcode.Run(debug)
+	set temp=intcode.GetOutput()
+	while temp'=-1 {
+		set res=temp
+		set temp=intcode.GetOutput()
 	}
-	
-	set res=""
-	set pos=$o(input(""),1,l)
-	set maxlen=0
-	while pos'="" {
-		set maxlen=$l(l,",")
-		for i=0:1:$l(l,",")-1 {
-			set instructions(i)=$p(l,",",i+1)
-		}
-		set pos=$o(input(pos),1,l)
-	}
-	
-	set pos=-1
-	set inputval=1
-	set relativebase=0
-	
-	while 1 {
-		set inst=instructions($i(pos))
-		quit:inst=99
-		set mode1=+$e($replace($j(inst#100000,5)," ",0),3)
-		set mode2=+$e($replace($j(inst#100000,5)," ",0),2)
-		set mode3=+$e($replace($j(inst#100000,5)," ",0),1)
-		set inst=inst#100
-		// ??? inst=4
-		zw:debug inst
-		zw:debug mode1
-		zw:debug relativebase
-		zw:debug pos
-		if mode1=2 {
-			set offset=0
-			set offset=relativebase
-			if (inst=3) {
-				set val1=$g(instructions($i(pos)),0)+offset
-			} else {
-				set val1=$g(instructions($g(instructions($i(pos)),0)+offset),0)
-			}	
-		} elseif ((mode1) || (inst=3) || (inst=4)) {
-			set val1=$g(instructions($i(pos)),0)
-		} else {
-			set val1=$g(instructions($g(instructions($i(pos)))),0)
-		}
-		zw:debug val1
-		if ((inst=1) || (inst=2) || (inst=5) || (inst=6) || (inst=7) || (inst=8)) {
-			if mode2=2 {
-				set offset=0
-				set offset=relativebase
-				set val2=$g(instructions($g(instructions($i(pos)),0)+offset),0)
-			} elseif mode2 {
-				set val2=$g(instructions($i(pos)),0)
-			} else {
-				set val2=$g(instructions($g(instructions($i(pos)),0)),0)
-			}
-			zw:debug val2
-			if ((inst=1) || (inst=2) || (inst=7) || (inst=8)) {
-				if mode3=2 {
-					set offset=0
-					set offset=relativebase
-					set storeloc=$g(instructions($i(pos)),0)+offset
-					//set storeloc=$g(instructions($i(pos)),0)+offset
-				} elseif (mode3) {
-					set storeloc=$g(instructions($i(pos)),0)
-				} else {
-					// ???
-					set storeloc=$g(instructions($i(pos)),0)
-				}
-				zw:debug storeloc
-			}
-		}
-		if inst=1 {
-			set instructions(storeloc)=val1+val2
-		} elseif inst=2 {
-			set instructions(storeloc)=val1*val2
-		} elseif inst=3 {
-			set instructions(val1)=inputval
-		} elseif inst=4 {
-			if mode1 {
-				set res=val1
-			} else {
-				set res=instructions(val1)
-			}
-			w:debug res,!
-		} elseif inst=5 {
-			if val1'=0 {
-				set pos=val2-1
-			}
-		} elseif inst=6 {
-			if val1=0 {
-				set pos=val2-1
-			}
-		} elseif inst=7 {
-			if val1<val2 {
-				set instructions(storeloc)=1
-			} else {
-				set instructions(storeloc)=0
-			}
-		} elseif inst=8 {
-			if val1=val2 {
-				set instructions(storeloc)=1
-			} else {
-				set instructions(storeloc)=0
-			}
-		} elseif inst=9 {
-			set relativebase=relativebase+val1
-		}
-	}
-	
 	quit res
 }
 
 ClassMethod D9P2(input="",debug=0) As %String
 {
-	if input="" {
-		do ##class(AOC.Y2019).GetInput(9,.input)
+	Set intcode=##class(AOC.Y2019.Utils.Intcode).%New(9)
+	D intcode.AddInput(2)
+	set tSC=intcode.Run(debug)
+	set temp=intcode.GetOutput()
+	while temp'=-1 {
+		set res=temp
+		set temp=intcode.GetOutput()
 	}
-	
-	set res=""
-	set pos=$o(input(""),1,l)
-	set maxlen=0
-	while pos'="" {
-		set maxlen=$l(l,",")
-		for i=0:1:$l(l,",")-1 {
-			set instructions(i)=$p(l,",",i+1)
-		}
-		set pos=$o(input(pos),1,l)
-	}
-	
-	set pos=-1
-	set inputval=2
-	set relativebase=0
-	
-	while 1 {
-		set inst=instructions($i(pos))
-		quit:inst=99
-		set mode1=+$e($replace($j(inst#100000,5)," ",0),3)
-		set mode2=+$e($replace($j(inst#100000,5)," ",0),2)
-		set mode3=+$e($replace($j(inst#100000,5)," ",0),1)
-		set inst=inst#100
-		// ??? inst=4
-		zw:debug inst
-		zw:debug mode1
-		zw:debug relativebase
-		zw:debug pos
-		if mode1=2 {
-			set offset=0
-			set offset=relativebase
-			if (inst=3) {
-				set val1=$g(instructions($i(pos)),0)+offset
-			} else {
-				set val1=$g(instructions($g(instructions($i(pos)),0)+offset),0)
-			}	
-		} elseif ((mode1) || (inst=3) || (inst=4)) {
-			set val1=$g(instructions($i(pos)),0)
-		} else {
-			set val1=$g(instructions($g(instructions($i(pos)))),0)
-		}
-		zw:debug val1
-		if ((inst=1) || (inst=2) || (inst=5) || (inst=6) || (inst=7) || (inst=8)) {
-			if mode2=2 {
-				set offset=0
-				set offset=relativebase
-				set val2=$g(instructions($g(instructions($i(pos)),0)+offset),0)
-			} elseif mode2 {
-				set val2=$g(instructions($i(pos)),0)
-			} else {
-				set val2=$g(instructions($g(instructions($i(pos)),0)),0)
-			}
-			zw:debug val2
-			if ((inst=1) || (inst=2) || (inst=7) || (inst=8)) {
-				if mode3=2 {
-					set offset=0
-					set offset=relativebase
-					set storeloc=$g(instructions($i(pos)),0)+offset
-				} elseif (mode3) {
-					set storeloc=$g(instructions($i(pos)),0)
-				} else {
-					// ???
-					set storeloc=$g(instructions($i(pos)),0)
-				}
-				zw:debug storeloc
-			}
-		}
-		if inst=1 {
-			set instructions(storeloc)=val1+val2
-		} elseif inst=2 {
-			set instructions(storeloc)=val1*val2
-		} elseif inst=3 {
-			set instructions(val1)=inputval
-		} elseif inst=4 {
-			if mode1 {
-				set res=val1
-			} else {
-				set res=instructions(val1)
-			}
-			w:debug res,!
-		} elseif inst=5 {
-			if val1'=0 {
-				set pos=val2-1
-			}
-		} elseif inst=6 {
-			if val1=0 {
-				set pos=val2-1
-			}
-		} elseif inst=7 {
-			if val1<val2 {
-				set instructions(storeloc)=1
-			} else {
-				set instructions(storeloc)=0
-			}
-		} elseif inst=8 {
-			if val1=val2 {
-				set instructions(storeloc)=1
-			} else {
-				set instructions(storeloc)=0
-			}
-		} elseif inst=9 {
-			set relativebase=relativebase+val1
-		}
-	}
-	
 	quit res
 }
 
